# Tango

./: .gitignore  CODEBASE.md  README.md  a-full_tango.py  a-latent-creation copy.py  a-latent-creation-wavcaps.py  a-latent-creation.ipynb  a-latent-creation.py  a-new-data-download.py  a-run_model.ipynb  constraints.txt  download_audiocaps.py  example_dataset_usage.py  infer_from_latent.py  main.py  prepare_tango_dataset.py  prepare_tango_dataset_simple.py  pyproject.toml  requirements.txt  simple_infer.py  train.py  unet_config.json  vae_infer.py  z-tests.ipynb
.trash/: config_examples.py
local_config/scheduler/: scheduler_config.json
original_files/: models.py
